--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "{PACKAGE}",
+  "name": "@eslinted/core",
   "version": "0.0.0",
   "description": "",
   "keywords": [],
   "license": "MIT",
   "type": "module",
-  "private": true,
+  "private": false,
   "config": {
     "PACKAGE_JSON_VERSION": "20.9.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jimmy-zhening-luo/{REPO}.git"
+    "url": "git+https://github.com/jimmy-zhening-luo/linted-core.git"
   },
-  "homepage": "https://github.com/jimmy-zhening-luo/{REPO}#readme",
+  "homepage": "https://github.com/jimmy-zhening-luo/linted-core#readme",
   "bugs": {
-    "url": "https://github.com/jimmy-zhening-luo/{REPO}/issues"
+    "url": "https://github.com/jimmy-zhening-luo/linted-core/issues"
   },
   "author": {
     "name": "Jimmy Zhening Luo",
@@ -30,18 +30,12 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "~8.57.0",
-    "linted": "~14.4.1",
+    "linted": "~14.4.5",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.5.3"
   },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/src/"
-    ]
-  },
   "scripts": {
-    "build": "run-s \"build:{1}:*\" lint:built  --  {SOURCE}",
+    "build": "run-s \"build:{1}:*\" lint:built  --  ts",
     "build:ts:compile": "tsc",
     "build:svelte:sync": "svelte-kit sync",
     "build:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
