bring types in scope

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "display": "@jimbojet/tsc",
-  "_version": "5.5.7",
+  "_version": "5.5.8",
   "$schema": "https://json.schemastore.org/tsconfig",
   "include": [
-    "src/**/*.ts",
     "*.config.ts",
+    "src/**/*.ts",
+    "interface/**/*.d.ts",
+    "types/**/*.d.ts",
   ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
