--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eslinted/core",
-  "version": "0.4.8-rc.1",
+  "version": "0.4.8",
   "description": "",
   "keywords": [],
   "license": "MIT",
