--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "display": "@jimbojet/tsc",
-  "_version": "5.5.8",
+  "_version": "5.5.9",
   "$schema": "https://json.schemastore.org/tsconfig",
   "include": [
     "*.config.ts",
@@ -17,8 +17,11 @@
     // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
     /* Language and Environment */
-    "target": "esnext", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "target": "es2022", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "lib": [
+      "es2023",
+      /* {{ CONFIGURE }} */
+    ],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     // "jsx": "preserve",                                /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -30,9 +33,9 @@
     "useDefineForClassFields": true, /* Emit ECMAScript-standard-compliant class fields. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
     /* Modules */
-    "module": "esnext", /* Specify what module code is generated. */
+    "module": "node16", /* Specify what module code is generated. */
     "rootDir": "src", /* Specify the root folder within your source files. */
-    "moduleResolution": "bundler", /* Specify how TypeScript looks up a file from a given module specifier. */
+    "moduleResolution": "node16", /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
     // "paths": { "*": ["node_modules/*"] }, /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -78,7 +81,7 @@
     "declarationDir": "dist", /* Specify the output directory for generated declaration files. */
     // "preserveValueImports": true,                     /* DEPRECATED -- USE `verbatimModuleSyntax`. [OLD: Preserve unused imported values in the JavaScript output that would otherwise be removed.] */
     /* Interop Constraints */
-    // "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
+    "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
     "verbatimModuleSyntax": true, /* Do not transform or elide any imports or exports not marked as type-only, ensuring they are written in the output file's format based on the 'module' setting. */
     "allowSyntheticDefaultImports": true, /* Allow 'import x from y' when a module doesn't have a default export. */
     "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
