--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eslinted/core",
-  "version": "0.6.0-rc.3",
+  "version": "0.6.0",
   "description": "",
   "keywords": [],
   "license": "MIT",
