--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
   "name": "@eslinted/core",
   "version": "0.9.0-rc.1",
-  "description": "",
+  "description": "Core ESLint flat config factory npm package `linted`.",
   "keywords": [],
   "license": "MIT",
-  "type": "module",
   "private": false,
-  "config": {
-    "PACKAGE_JSON_VERSION": "20.10.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jimmy-zhening-luo/linted-core.git"
-  },
+  "repository": "github:jimmy-zhening-luo/linted-core",
   "homepage": "https://github.com/jimmy-zhening-luo/linted-core#readme",
-  "bugs": {
-    "url": "https://github.com/jimmy-zhening-luo/linted-core/issues"
-  },
-  "author": {
-    "name": "Jimmy Zhening Luo",
-    "email": "1450044+jimmy-zhening-luo@users.noreply.github.com",
-    "url": "https://jimm.my"
-  },
+  "bugs": "https://github.com/jimmy-zhening-luo/linted-core/issues",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
-    "node": ">=20.15.0"
+    "node": ">=20.15.0",
+    "npm": ">=10.7.0"
   },
   "peerDependencies": {},
   "peerDependenciesMeta": {},
@@ -35,7 +23,7 @@
     "eslint": "~8.57.0",
     "linted": "~15.4.5",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4"
   },
   "scripts": {
     "build": "run-s \"build:{1}:*\" lint:built  --  ts",
@@ -56,5 +44,9 @@
     "prepublishOnly": "npm test",
     "predeploy": "npm test",
     "deploy": ""
-  }
+  },
+  "config": {
+    "PACKAGE_JSON": "20.12.0"
+  },
+  "author": "Jimmy Zhening Luo <1450044+jimmy-zhening-luo@users.noreply.github.com> (https://jimm.my/)"
 }
