--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eslinted/core",
-  "version": "0.9.0-rc.8",
+  "version": "0.9.0",
   "description": "Core ESLint flat config factory npm package `linted`.",
   "keywords": [],
   "license": "MIT",
