--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eslinted/core",
-  "version": "1.0.1",
+  "version": "2.0.0-rc.0",
   "description": "Core ESLint flat config factory npm package `linted`.",
   "keywords": [],
   "license": "MIT",
