--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "_schemaVersion": "20.13.0",
   "name": "@eslinted/core",
-  "version": "2.2.0-rc.2",
+  "version": "2.2.0",
   "description": "Core ESLint flat config factory npm package `linted`.",
   "keywords": [],
   "license": "MIT",
