--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "~9.8.0",
+    "linted": "~16.0.0-rc.4",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.5.4"
   },
