--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,4 +1,4 @@
-name: NPM Publish (dev)
+name: NPM Publish (rc)
 
 on:
   push:
@@ -6,13 +6,13 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+-rc.[0-9]+
 
 jobs:
-  publish-dev:
+  publish-rc:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     environment:
-      name: dev
+      name: publish
       url: https://www.npmjs.com/package/@eslinted/core
-    name: Build/Publish (dev)
+    name: Build/Publish (rc)
     steps:
       - name: Checkout
         id: checkout
