--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "eslint": "~9.9.1",
-    "linted": "~16.3.7",
+    "linted": "~16.3.8-rc.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.5.4"
   },
