--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.16.1",
+  "_schemaVersion": "20.17.0",
   "name": "@eslinted/core",
   "version": "3.1.21",
   "description": "Core ESLint flat config factory npm package `linted`.",
@@ -17,8 +17,8 @@
   "types": "dist/index.d.ts",
   "engineStrict": true,
   "engines": {
-    "node": ">=20.16.0",
-    "npm": ">=10.8.1"
+    "node": ">=20.17.0",
+    "npm": ">=10.8.2"
   },
   "peerDependenciesMeta": {},
   "dependencies": {
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "eslint": "~9.9.1",
-    "linted": "~16.3.8-rc.3",
+    "linted": "16.3.8-rc.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.5.4"
   },
