--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.17.2",
+  "_schemaVersion": "20.17.3",
   "name": "@eslinted/core",
   "version": "3.4.0-rc.1",
   "description": "Core ESLint flat config factory npm package `linted`.",
@@ -34,9 +34,9 @@
     "build:svelte:sync": "svelte-kit sync",
     "build:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
     "build:svelte:compile": "vite build",
-    "build:svelte:prelint": "npm run ln src/**/*.svelte",
+    "build:svelte:prelint": "npm run ln src/**/*.svelte || echo \"Svelte prelint step failed.\"",
     "lint": "npm run build || echo \"No linter installed.\"",
-    "lint:built": "run-s lint:built:*",
+    "lint:built": "run-s -c lint:built:*",
     "lint:built:configs": "npm run ln {*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
     "lint:built:source": "npm run ln src/**/*.{js,ts,html}",
     "ln": "eslint --cache --fix --no-error-on-unmatched-pattern",
