--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "build:svelte:prelint": "npm run ln src/**/*.svelte || echo \"Svelte prelint step failed.\"",
     "lint": "npm run build || echo \"No linter installed.\"",
     "lint:built": "run-s -c lint:built:*",
-    "lint:built:configs": "npm run ln {*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
-    "lint:built:source": "npm run ln src/**/*.{js,ts,html}",
-    "ln": "eslint --cache --fix --no-error-on-unmatched-pattern",
+    "lint:built:configs": "npm run ln --files={*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
+    "lint:built:source": "npm run ln --files=src/**/*.{js,ts,html}",
+    "ln": "eslint --cache --fix %npm_config_files%",
     "pretest": "npm run build",
     "test": "",
     "start": "vite preview || node .",
