--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "build:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
     "build:svelte:compile": "vite build",
     "build:svelte:prelint": "npm run ln src/**/*.svelte || echo \"Svelte prelint step failed.\"",
-    "lint": "npm run build || echo \"No linter installed.\"",
+    "lint": "npm run build",
     "lint:built": "run-s -c lint:built:*",
     "lint:built:configs": "npm run ln --files={*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
     "lint:built:source": "npm run ln --files=src/**/*.{js,ts,html}",
-    "ln": "eslint --cache --fix %npm_config_files%",
+    "ln": "eslint --cache --fix %npm_config_files% || echo \"No linter installed.\"",
     "pretest": "npm run build",
     "test": "",
     "start": "vite preview || node .",
