--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.17.3",
+  "_schemaVersion": "20.17.7",
   "name": "@eslinted/core",
   "version": "3.4.0-rc.3",
   "description": "Core ESLint flat config factory npm package `linted`.",
@@ -34,12 +34,12 @@
     "build:svelte:sync": "svelte-kit sync",
     "build:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
     "build:svelte:compile": "vite build",
-    "build:svelte:prelint": "npm run ln src/**/*.svelte || echo \"Svelte prelint step failed.\"",
+    "build:svelte:prelint": "npm run ln src/**/*.svelte",
     "lint": "npm run build",
     "lint:built": "run-s -c lint:built:*",
     "lint:built:configs": "npm run ln --files={*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
     "lint:built:source": "npm run ln --files=src/**/*.{js,ts,html}",
-    "ln": "eslint --cache --fix %npm_config_files% || echo \"No linter installed.\"",
+    "ln": "eslint --cache --fix --no-error-on-unmatched-pattern %npm_config_files% || echo \"No linter installed.\"",
     "pretest": "npm run build",
     "test": "",
     "start": "vite preview || node .",
