--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "_schemaVersion": "20.17.7",
   "name": "@eslinted/core",
-  "version": "3.4.0-rc.4",
+  "version": "3.4.0",
   "description": "Core ESLint flat config factory npm package `linted`.",
   "keywords": [],
   "license": "MIT",
