--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "globals": "^15.9.0"
   },
   "devDependencies": {
+    "eslint": "9.10.0",
+    "linted": "16.7.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.6.2"
   },
