--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "eslint": "9.10.0",
-    "linted": "16.8.0-rc.1",
+    "linted": "16.8.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.6.2"
   },
