--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "display": "@jimbojet/tsc",
   "$schema": "https://json.schemastore.org/tsconfig",
-  "_version": "5.5.10",
+  "_version": "5.6.1",
   "include": [
     "*.config.ts",
     "src/**/*.ts",
-    "types/**/*.d.ts" /* @OVERRIDE */,
+    "tests/**/*.ts",
+    "typings/**/*.d.ts",
   ],
   "exclude": [],
   "compilerOptions": {
@@ -40,8 +41,8 @@
     // "allowUmdGlobalAccess": true,
     // "baseUrl": "./",
     // "customConditions": [],
-    "module": "node16",
-    "moduleResolution": "node16",
+    "module": "es2022",
+    "moduleResolution": "bundler",
     // "moduleSuffixes": [],
     // "noResolve": true,
     // "paths": { "*": ["node_modules/*"] },
