--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "_schemaVersion": "20.17.8",
+  "_schemaVersion": "20.17.10",
   "name": "@eslinted/core",
   "version": "4.0.2",
   "description": "Core ESLint flat config factory npm package `linted`.",
   "keywords": [],
+  "repository": "github:jimmy-zhening-luo/linted-core",
+  "homepage": "https://github.com/jimmy-zhening-luo/linted-core#readme",
+  "bugs": "https://github.com/jimmy-zhening-luo/linted-core/issues",
   "license": "MIT",
   "private": false,
   "publishConfig": {
     "access": "public"
   },
-  "repository": "github:jimmy-zhening-luo/linted-core",
-  "homepage": "https://github.com/jimmy-zhening-luo/linted-core#readme",
-  "bugs": "https://github.com/jimmy-zhening-luo/linted-core/issues",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "config": {
+    "language": "ts",
+    "fix": "true",
+    "lint": "false"
+  },
   "engineStrict": true,
   "engines": {
     "node": ">=20.17.0",
@@ -26,25 +31,47 @@
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
+    "run-script-os": "^1.1.6",
     "ts-add-js-extension": "^1.6.4",
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "build": "run-s \"build:{1}:*\" lint:built  --  ts",
-    "build:ts:compile": "tsc",
-    "build:ts:fix": "ts-add-js-extension --dir=dist",
-    "build:svelte:sync": "svelte-kit sync",
-    "build:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
-    "build:svelte:compile": "vite build",
-    "build:svelte:prelint": "npm run ln src/**/*.svelte",
+    "build": "run-os",
+    "build:default": "npm run rebuild -- $npm_package_config_language $npm_package_config_fix $npm_package_config_lint default",
+    "build:windows": "npm run rebuild -- %npm_package_config_language% %npm_package_config_fix% %npm_package_config_lint% windows",
+    "rebuild": "run-s \"clean:{1}:{4}\" \"compile:{1}:*\" \"fix:{2} -- {1}\" \"lint:{3}\" --",
+    "clean:ts:default": "rm -rf dist",
+    "clean:ts:windows": "cmd /c if exist dist rmdir /s /q dist",
+    "clean:svelte:default": "rm -rf build .svelte-kit",
+    "clean:svelte:windows": "run-s clean:svelte:windows:*",
+    "clean:svelte:windows:build": "cmd /c if exist build rmdir /s /q build",
+    "clean:svelte:windows:kit": "cmd /c if exist .svelte-kit rmdir /s /q .svelte-kit",
+    "compile:ts:compile": "tsc",
+    "compile:svelte:sync": "svelte-kit sync",
+    "compile:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
+    "compile:svelte:compile": "vite build",
+    "fix:true": "run-s \"fix:dist:{1}\" --",
+    "fix:false": "echo \"Fix skipped (fix=false)\"",
+    "fix:dist:ts": "ts-add-js-extension --dir=dist",
+    "fix:dist:svelte": "echo \"Fix skipped for Svelte (handled by SvelteKit)\"",
+    "li": "eslint --cache --fix",
     "lint": "npm run build",
-    "lint:built": "run-s lint:built:*",
-    "lint:built:configs": "npm run ln --files={*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
-    "lint:built:source": "npm run ln --files=src/**/*.{js,ts,html}",
-    "ln": "eslint --cache --fix --no-error-on-unmatched-pattern %npm_config_files% || echo \"No linter installed.\"",
+    "lint:true": "run-os",
+    "lint:true:default": "run-s lint:scope:global:* \"lint:scope:$npm_package_config_language\"",
+    "lint:true:windows": "run-s lint:scope:global:* \"lint:scope:%npm_package_config_language%\"",
+    "lint:false": "(npm run lint:true) || (echo \"Skipped linting (lint=false)\")",
+    "lint:scope:global:configs": "npm run li -- {*,.github/**/*}.{json,jsonc,yml,yaml,js,cjs,mjs,ts,cts,mts}",
+    "lint:scope:global:code": "npm run li -- {src,tests,static,typings}/**/*.{html,js,cjs,mjs,ts,cts,mts}",
+    "lint:scope:ts": "exit 0",
+    "lint:scope:svelte": "npm run li -- {src,tests,static}/**/*.svelte",
+    "postbuild": "echo \"Build (+lint) complete.\"",
     "pretest": "npm run build",
     "test": "",
-    "start": "vite preview || node .",
+    "start": "run-os",
+    "start:default": "npm run starter:$npm_package_config_language",
+    "start:windows": "npm run starter:%npm_package_config_language%",
+    "starter:ts": "node .",
+    "starter:svelte": "vite preview",
     "prestart": "npm test",
     "prepublishOnly": "npm test",
     "predeploy": "npm test",
