--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.18.0",
+  "_schemaVersion": "20.18.0-core.0",
   "name": "@eslinted/core",
   "version": "4.0.4",
   "description": "Core ESLint flat config factory npm package `linted`.",
@@ -13,8 +13,22 @@
     "access": "public"
   },
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./input": {
+      "types": "./dist/input.d.ts"
+    },
+    "./scopes": {
+      "types": "./dist/scopes.d.ts",
+      "default": "./dist/scopes.js"
+    },
+    "./output": {
+      "types": "./dist/output.d.ts"
+    }
+  },
   "config": {
     "language": "ts",
     "fix": "true",
