--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "access": "public"
   },
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": {
