--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,8 @@
     // "typeRoots": [],
     "types": [
       /* {CONFIGURE} */
+      "mocha",
+      "chai",
     ],
     // #endregion MODULES
 
