--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "22.10.0",
+  "_schemaVersion": "22.10.1",
   "name": "@eslinted/core",
   "version": "6.0.0",
   "description": "Core ESLint flat config factory npm package `linted`.",
@@ -10,7 +10,8 @@
   "license": "MIT",
   "private": false,
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "tag": "next"
   },
   "type": "module",
   "main": "dist/index.js",
