test release scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "22.10.1",
+  "_schemaVersion": "22.10.2-rc.0",
   "name": "@eslinted/core",
   "version": "7.0.0-rc.0",
   "description": "Core ESLint flat config factory npm package `linted`.",
@@ -81,6 +81,9 @@
     "starter:svelte": "vite preview",
     "prestart": "npm test",
     "prepublishOnly": "npm test",
+    "postpublish": "run-os",
+    "postpublish:default": "if [ \"${npm_package_version#*-}\" = \"${npm_package_version}\" ]; then npm dist-tag add \"$npm_package_name@$npm_package_version\" latest; fi",
+    "postpublish:windows": "for /f \"delims=-\" %a in (\"%npm_package_version%\") do if \"%a\" == \"%npm_package_version%\" npm dist-tag add \"%npm_package_name%@%npm_package_version%\" latest",
     "predeploy": "npm test",
     "deploy": ""
   },
