--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: rc
-      url: https://www.npmjs.com/package/@eslinted/core
+      url: https://www.npmjs.com/package/@eslinted/core?activeTab=versions
     name: Build/Publish (rc)
     steps:
       - name: Checkout
