tslint parser options: update to v8.15 projectService
- upgrade to latest project inference using projectService instead of project, optionally with tsconfigrootdir to set an absolute project root (disabled)
  - commented out for now
  - i believe it needs to be an absolute path
  - curious how it changes how ESLint from CLI or from VSCode interact with various files being linted especially in:
    - an IDE setting
    - from CLI in a subdir from where eslintconfig is, e.g. in directories without linted installed if eslint.config.js is not re-exported as it currently is
    - install @types/node and include in global types if eventually import.meta.dirname will be used to get the absolute path
    - need to see how import.meta.dirname works, will it get absolute path of the eslintconfig file where it is being invoked? i believe so, but needs further testing
- allow global return
- explicitly disable jsx (off by default anyway)
- never parse jsdoc
- +warnontsversion off
- +docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,7 @@
       "mocha",
       "chai",
       /* {CONFIGURE} */
+      "node" /* @OVERRIDE: required for ts.parserOptions.tsconfigRootDir: import.meta.dirname */,
     ],
     // #endregion MODULES
 
