--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
+    "@types/node": "22.9.3",
     "chai": "^5.1.2",
     "mocha": "^10.8.2",
     "npm-run-all": "^4.1.5",
