--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
-    "@types/node": "22.10.1",
+    "@types/node": "^22.10.2",
     "chai": "^5.1.2",
     "mocha": "^11.0.1",
     "npm-run-all": "^4.1.5",
