--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "_schemaVersion": "22.12.1",
   "name": "@eslinted/core",
-  "version": "15.0.0-rc.0",
+  "version": "15.0.0",
   "description": "Core ESLint flat config factory npm package `linted`.",
   "keywords": [],
   "repository": "github:jimmy-zhening-luo/linted-core",
