--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "22.13.0-rc.0",
+  "_schemaVersion": "22.13.0",
   "name": "@eslinted/core",
   "version": "15.1.0-rc.2",
   "description": "Core ESLint flat config factory npm package `linted`.",
