--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "22.13.1",
+  "$template": "22.13.2",
   "name": "@eslinted/core",
   "version": "15.2.7",
   "description": "Core ESLint flat config factory npm package `linted`.",
