--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$template": "22.13.7",
+  "$template": "22.13.8",
   "name": "@eslinted/core",
   "version": "16.0.3",
   "description": "Core ESLint flat config factory npm package `linted`.",
@@ -59,8 +59,8 @@
     "lint:true:default": "run-s lint:scope:global:* \"lint:scope:$npm_package_config_language\"",
     "lint:true:windows": "run-s lint:scope:global:* \"lint:scope:%npm_package_config_language%\"",
     "lint:false": "(npm run lint:true) || (echo \"Skipped linting (lint=false)\")",
-    "lint:scope:global:configs": "npm run linter -- {*,.github/**/*}.{json,jsonc,yml,yaml,js,cjs,mjs,ts,cts,mts}",
-    "lint:scope:global:code": "npm run linter -- {src,tests,static,typings}/**/*.{html,js,cjs,mjs,ts,cts,mts}",
+    "lint:scope:global:configs": "npm run linter -- {*,.github/**/*,.vscode/**/*}.{js,cjs,mjs,ts,cts,mts,html,json,jsonc,code-snippets,yml,yaml}",
+    "lint:scope:global:code": "npm run linter -- {src,tests,static,typings,public}/**/*.{js,cjs,mjs,ts,cts,mts,html,json,jsonc,yml,yaml}",
     "lint:scope:ts": "echo \"Linting `ts`\"",
     "lint:scope:svelte": "npm run linter -- {src,tests,static}/**/*.svelte",
     "linter": "eslint --cache --fix",
