--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$template": "22.14.8",
+  "$template": "22.14.9",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "@eslinted/core",
@@ -10,8 +10,8 @@
   "private": false,
   "engineStrict": true,
   "engines": {
-    "node": ">=22.14.0",
-    "npm": ">=11.2.0"
+    "node": ">=22.14.0 <23",
+    "npm": ">=11.2.0 <12"
   },
   "peerDependenciesMeta": {},
   "dependencies": {
