--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "deploy": ""
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "tag": "next"
   },
   "mocha": {
     "spec": [
