--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
     "deploy": ""
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "next"
+    "access": "public"
   },
   "mocha": {
     "spec": [
