lint with fixed json rules

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -107,7 +107,9 @@
     "shortcut_syntax": false,
   } /* MD052 */,
   "link-image-reference-definitions": {
-    "ignored_definitions": ["//"] /* @default: ["//"] */,
+    "ignored_definitions": [
+      "//",
+    ] /* @default: ["//"] */,
   } /* MD053 */,
   "link-image-style": {
     "autolink": true,
