--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2211.1.2-alpha.1",
+  "$pkg": "2211.1.2-rc.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "@eslinted/core",
