--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "@eslinted/core",
-  "version": "22.1.4-rc.4",
+  "version": "22.1.4",
   "repository": "github:jimmy-zhening-luo/linted-core",
   "private": false,
   "engineStrict": true,
