--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -24,13 +24,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          check-latest: true
-          registry-url: "https://registry.npmjs.org"
+          registry-url: https://registry.npmjs.org
       - name: Install Dependencies
         id: ci
         run: npm ci
       - name: Publish to NPM
         id: publish
         run: npm publish
-        env:
-          NODE_AUTH_TOKEN: "${{ secrets.NPM_TOKEN }}"
+        env: { NODE_AUTH_TOKEN: "${{ secrets.NPM_TOKEN }}" }
