--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -9,16 +9,12 @@ jobs:
     environment:
       name: RELEASE
       url: https://www.npmjs.com/package/@eslinted/core?activeTab=versions
-    permissions:
-      contents: read
+    permissions: { contents: read }
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4
-        with:
-          submodules: true
-          lfs: false
       - name: Install Node
         id: node
         uses: actions/setup-node@v4
@@ -31,4 +27,4 @@ jobs:
       - name: Publish to NPM
         id: publish
         run: npm publish
-        env: { NODE_AUTH_TOKEN: "${{ secrets.NPM_TOKEN }}" }
+        env: { NODE_AUTH_TOKEN: "${{secrets.NPM_TOKEN}}" }
