--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -1,6 +1,9 @@
 --- # rc.yml
 name: NPM Publish (rc)
-on: { push: { tags: ['v[0-9]+.[0-9]+.[0-9]+-rc.[0-9]+'] } }
+on:
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+-rc.[0-9]+'
 jobs:
   publish-rc:
     name: Build/Publish (rc)
