--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "type": "module",
   "peerDependenciesMeta": {},
+  "dependencies": {
+    "@eslint/config-helpers": "^0.4.1"
+  },
   "devDependencies": {
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
