--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "../tsconfig-base.json",
+  "extends": "./tsconfig-src.json",
   "include": [
-    "../typings/**/*",
     "**/*",
   ],
   "references": [
@@ -9,8 +8,4 @@
       "path": "../typings",
     },
   ],
-  "compilerOptions": {
-    "outDir": "../dist",
-    "composite": true,
-  },
 }
