--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,9 @@
 *.bash_aliases text eol=lf
 
 *.gitattributes text eol=lf
+*.gitconfig text eol=lf
 *.gitignore text eol=lf
+*.git-credentials text eol=lf
 LICENSE text eol=lf
 *.txt text eol=lf
 *.md text eol=lf
@@ -17,6 +19,7 @@ LICENSE text eol=lf
 *.jsonc text eol=lf
 *.yml text eol=lf
 *.yaml text eol=lf
+*.npmrc text eol=lf
 *.js text eol=lf
 *.cjs text eol=lf
 *.mjs text eol=lf
@@ -31,3 +34,11 @@ LICENSE text eol=lf
 *.svg text eol=lf
 *.csv text eol=lf
 *.tsv text eol=lf
+*.ps1 text eol=lf
+*.psm1 text eol=lf
+*.psd1 text eol=lf
+*.claspignore text eol=lf
+*.funcignore text eol=lf
+*.py text eol=lf
+*.jinja text eol=lf
+*.example text eol=lf
