--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "npm": "^11"
   },
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "devDependencies": {
